@@ -6,6 +6,9 @@
     * Do not pass Product data by open/updateOrder request.
     * Do not pass Subscription data by open/updateOrder request, but keep it in WC session. Just before redirect to the success page save it as Order meta data.
     * Logs directory was moved to wp-content/uploads/nuvei-logs.
+    * Removed old log directory from the plugin.
+    * Removed the option to change the DMN URL.
+    * Removed the option to read the Today log file. Any file manager plugin can be use instead.
 
 # 1.2.4
     * Fix for the case when updateOrder does not upgrade empty userTokenId.
